# xbi

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  Makefile  PSP-33-XBI-Standard.md  README.md  commitlint.config.js  flake.nix  release.toml  rust-toolchain  rust-toolchain.toml  xbi-format-specs.md
.github/ISSUE_TEMPLATE/: backlog.yml
.github/workflows/: changelog.yml  comment_version_on_pr.yml  coverage.yml  lint.yml  lint_commits.yml  pull_request.yml  release.yml  semantic_version.yml  subalfred.yaml  test.yml
client/: Cargo.toml  Makefile  default.toml  local.toml
client/channel-example/: Cargo.toml  Makefile
client/channel-example/src/: config.rs  extrinsic.rs  http.rs  main.rs  manager.rs  node.rs  subscriber.rs
client/src/: config.rs  extrinsic.rs  http.rs  main.rs  manager.rs  node.rs  subscriber.rs
client/src/extrinsic/: hrmp.rs  mod.rs  sudo.rs  xcm.rs
crates/: Cargo.toml
crates/channel/: Cargo.toml
crates/channel-primitives/: Cargo.toml
crates/channel-primitives/src/: lib.rs
crates/channel-primitives/src/queue/: mod.rs  ringbuffer.rs
crates/channel-primitives/src/traits/: mod.rs  shims.rs
crates/channel/src/: lib.rs
crates/channel/src/receiver/: mod.rs
crates/channel/src/receiver/frame/: mod.rs  queue_backed.rs  sync.rs
crates/channel/src/sender/: mod.rs
crates/channel/src/sender/frame/: mod.rs  queue_backed.rs  sync.rs
crates/format/: Cargo.toml
crates/format/src/: lib.rs  xbi_codec.rs
crates/receiver/: Cargo.toml
crates/receiver/src/: lib.rs
crates/receiver/src/frame/: mod.rs  queue_backed.rs  sync.rs
crates/sabi/: Cargo.toml
crates/sabi/src/: error.rs  lib.rs
crates/scabi/: Cargo.toml
crates/scabi/src/: error.rs  evm.rs  lib.rs  wasm.rs
crates/sender/: Cargo.toml
crates/sender/src/: frame.rs  lib.rs
crates/sender/src/frame/: mod.rs  queue_backed.rs  sync.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/xbi-format/: Cargo.toml
crates/xbi-format/src/: lib.rs
crates/xcm-primitives/: Cargo.toml
crates/xcm-primitives/src/: frame_traits.rs  lib.rs
diagrams/: req-reply-flow.puml
docs/: PSP-33-XBI-Standard.md  xbi-w3f-grant.md
enter/: Cargo.toml
enter/evm_precompile/: Cargo.toml
enter/evm_precompile/src/: lib.rs
enter/src/: lib.cb.rs  lib.rs  t3rn_sfx.rs
integration-test/: Cargo.toml
integration-test/large/: Cargo.toml
integration-test/large/src/: assets_config.rs  contracts_config.rs  lib.rs  xcm_config.rs
integration-test/slim/: Cargo.toml
integration-test/slim/src/: contracts_config.rs  lib.rs
integration-test/src/: large.rs  lib.rs  macros.rs  slim.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: lib.rs  mock.rs  tests.rs
pallets/asset-registry/src/convert/: mod.rs
pallets/portal/: Cargo.toml  README.md
pallets/portal-enter/: Cargo.toml
pallets/portal-enter/evm_precompile/: Cargo.toml
pallets/portal-enter/evm_precompile/src/: lib.rs
pallets/portal-enter/src/: lib.rs  t3rn_sfx.rs
pallets/portal/src/: assets.rs  impls.rs  lib.rs  mock.rs  tests.rs  xbi_abi.rs  xbi_format.rs  xbi_scabi.rs
pallets/portal/src/primitives/: assets.rs  defi.rs  evm.rs  mod.rs  xbi.rs  xbi_callback.rs  xcm.rs
sabi/: Cargo.toml
sabi/src/: lib.rs
scabi/: Cargo.toml
scabi/src/: error.rs  evm.rs  wasm.rs
scripts/: initial_testing_calls.sh  subalfred-check.sh
specs/: 0001-asset-registry.md
specs/diagrams/: delegate-async-flow.puml
src/: README.md  lib.rs  lib.wp.rs  sabi.rs  scabi.rs  tests.rs  xbi_abi.rs  xbi_codec.rs  xbi_codec_println.rs  xbi_format.rs  xbi_scabi.rs
src/primitives/: assets.rs  defi.rs  mod.rs  orml.rs  transfers.rs  wasm.rs  xbi.rs  xbi_callback.rs  xcm.rs
src/scabi/: evm.rs  wasm.rs
xbi-format/: Cargo.toml
xbi-format/src/: lib.rs  xbi_codec.rs
xcm-primitives/: Cargo.toml
xcm-primitives/src/: frame_traits.rs  lib.rs
