[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "XBI integration test suite"
edition     = "2021"
license     = "Apache-2.0"
name        = "xbi-integration-tests"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.2"

[dependencies]
bytes         = "1.2.1"
hex           = "0.4.3"
hex-literal   = "0.3.4"
log           = "0.4"
proc-macro2   = "1.0.40"
simple_logger = "*"
wat           = "1"

codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false }
serde      = { version = "1.0.144", optional = true }

frame-support   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-system    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-assets   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
cumulus-primitives-core   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }
parachain-info            = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.39" }

pallet-xcm                  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", version = "0.9.39" }
polkadot-parachain          = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", version = "0.9.39" }
polkadot-primitives         = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", version = "0.9.39" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", version = "0.9.39" }
rococo-runtime              = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39", version = "0.9.39" }

# XBI
pallet-asset-registry   = { path = "../pallets/asset-registry" }
pallet-xbi-portal       = { path = "../pallets/portal" }
substrate-abi           = { path = "../crates/sabi" }
substrate-contracts-abi = { path = "../crates/scabi" }
xp-channel              = { path = "../crates/channel-primitives" }
xp-format               = { path = "../crates/format" }
xp-xcm                  = { path = "../crates/xcm-primitives" }

# XCM
xcm          = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.39" }
xcm-emulator = { git = "https://github.com/AwesomeIbex/xcm-simulator.git", branch = "polkadot-v0.9.39" }

large = { path = "large" }
slim  = { path = "slim" }

[dev-dependencies]
