[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "XBI Substrate ABI"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "substrate-abi"
repository  = "https://github.com/t3rn/xbi/"
version     = "0.1.0"

[dependencies]
log   = { version = "0.4.14", default-features = false }
serde = { default-features = false, version = "1.0", optional = true }

codec      = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[features]
default = [ "std" ]
std     = [ "sp-std/std", "sp-core/std", "sp-runtime/std", "scale-info/std", "serde/std", "codec/std", "log/std" ]
