[package]
name = "xbi-format"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { default-features = false, version = "1.0", optional = true }
log = { version = "0.4.14", default-features = false }

codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

sabi = { path = "../sabi", default-features = false, package = "substrate-abi" }
scabi = { path = "../scabi", default-features = false, package = "substrate-contracts-abi" }

[features]
default = ["std"]
std = ["sp-std/std", "sp-core/std", "sp-runtime/std", "frame-system/std", "frame-support/std", "sabi/std", "scabi/std"]

