[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "XBI format for creating and handling XBI messages"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "xbi-format"
repository  = "https://github.com/t3rn/xbi/"
version     = "0.2.0"

[dependencies]
log   = { version = "0.4.14", default-features = false }
serde = { default-features = false, version = "1.0", optional = true }

codec      = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

sabi  = { path = "../sabi", default-features = false, package = "substrate-abi" }
scabi = { path = "../scabi", default-features = false, package = "substrate-contracts-abi" }

[features]
default = [ "std" ]
std = [
    "log/std",
    "codec/std",
    "scale-info/std",
    "serde/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "sabi/std",
    "scabi/std",
]
