[package]
edition = "2021"
name    = "t3rn-xcm-primitives"
version = "0.2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [ 'derive' ] }
xcm   = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.36", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", optional = true }

xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36", default-features = false, optional = true }

[features]
default   = [ "std", "frame-std" ]
frame     = [ "sp-runtime", "xcm-executor" ]
frame-std = [ "sp-runtime/std", "xcm-executor/std" ]
std       = [ "xcm/std", "codec/std" ]
