[package]
authors     = [ "t3rn ltd. <team@t3rn.io>" ]
description = "XBI Substrate ABI"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "xbi-client-channel-example"
repository  = "https://github.com/t3rn/xbi/"
version     = "0.1.0"

[dependencies]
env_logger = "0.9.0"
log = { version = "0.4.14" }
structopt = { version = "0.3.26" }
structopt-toml = { version = "0.5.1" }
thiserror = { version = "1.0.30" }
anyhow = { version = "1.0.65" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

serde = { version = "1.0.136",  features = ["derive"] }
serde_json = { version = "1.0.79"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-keyring = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { version = "6.0.0", default-features = false, features = ["full_crypto"], git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.27", features = ["std"] }