[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "Primitives to support XBI channel"
edition     = "2021"
license     = "Apache-2.0"
name        = "xbi-channel-primitives"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.2"

# TODO: reformat all of these primitives to follow the general standard for substrate style primitives, i.e.: xp-channel means (xbi primitives channel)
[dependencies]
codec      = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0" }

# Optional frame specific deps
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true, version = "4.0.0-dev" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false, optional = true, version = "0" }

xbi-format = { path = "../xbi-format", default-features = false, version = "0.3.2" }

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "1.0.0"

[features]
default   = [ "std", "frame", "frame-std" ]
frame     = [ "frame-support", "xcm" ]
frame-std = [ "frame-support/std", "xcm/std" ]
std       = [ "sp-runtime/std", "sp-std/std", "xbi-format/std", "codec/std", "scale-info/std" ]
