[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "Primitives to support XBI channel"
edition     = "2021"
license     = "Apache-2.0"
name        = "xp-channel"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

[dependencies]
codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log        = { version = "0.4.14", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }

xp-format = { path = "../format", default-features = false }

# Optional frame specific deps
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false, optional = true }
xcm           = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0", default-features = false, optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "1.0.0"

[features]
default   = [ "std", "frame", "frame-std" ]
frame     = [ "frame-support", "xcm" ]
frame-std = [ "frame-support/std", "xcm/std" ]
std       = [ "sp-runtime/std", "sp-std/std", "xp-format/std", "codec/std", "scale-info/std", "log/std" ]
