[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "XBI as a channel"
edition     = "2021"
license     = "Apache-2.0"
name        = "xs-channel"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

[dependencies]
codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log        = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-io      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "4.0.0" }

xp-channel = { path = "../../crates/channel-primitives", default-features = false, version = "0.3" }
xp-format  = { path = "../../crates/format", default-features = false, version = "0.3" }
xp-xcm     = { path = "../xcm-primitives", default-features = false, version = "0.3" }

# Enabled by frame
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "4.0.0-dev", optional = true }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "4.0.0-dev", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "1.0.0"

[features]
default   = [ "std", "frame", "frame-std" ]
frame     = [ "frame-support", "frame-system", "xp-channel/frame", "xp-xcm/frame" ]
frame-std = [ "frame-support/std", "frame-system/std", "xp-channel/frame-std", "xp-xcm/frame-std" ]
std       = [ "log/std", "codec/std", "scale-info/std", "sp-runtime/std", "sp-std/std", "xp-channel/std", "sp-io/std", "sp-core/std", "xp-format/std", "xp-xcm/std" ]
