[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "XBI format for creating and handling XBI messages"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "xp-format"
repository  = "https://github.com/t3rn/xbi/"
version     = "0.3.6"

[dependencies]
codec      = { package = "parity-scale-codec", version = "3", default-features = false }
log        = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0-dev" }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0" }

sabi  = { path = "../sabi", default-features = false, package = "substrate-abi", version = "0.3" }
scabi = { path = "../scabi", default-features = false, package = "substrate-contracts-abi", version = "0.3" }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", version = "4.0.0-dev" }

[features]
default = [ "std" ]
std     = [ "log/std", "codec/std", "scale-info/std", "sp-std/std", "sp-core/std", "sp-runtime/std", "frame-system/std", "sabi/std", "scabi/std" ]
