[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "A receiver channel part of XBI"
edition     = "2021"
license     = "Apache-2.0"
name        = "xs-receiver"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.2"

# TODO: share the same crate for sender/receiver and enable via feature flags

[dependencies]
codec      = { package = "parity-scale-codec", version = "3", default-features = false }
log        = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-io      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, version = "4.0.0" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true, version = "4.0.0-dev" }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true, version = "4.0.0-dev" }

xp-channel = { path = "../../crates/channel-primitives", default-features = false, version = "0.3" }
xp-format  = { path = "../../crates/format", default-features = false, version = "0.3" }
xs-sender  = { path = "../../crates/sender", default-features = false, version = "0.3" }

[features]
default   = [ "std", "frame-std" ]
frame     = [ "frame-support", "frame-system" ]
frame-std = [ "frame-support/std", "frame-system/std" ]
requests  = [  ]
responses = [  ]
std       = [ "log/std", "codec/std", "scale-info/std", "xp-format/std", "xs-sender/std", "sp-std/std", "sp-io/std", "sp-core/std", "sp-runtime/std", "xp-channel/std" ]
