[package]
authors     = [ "t3rn <team@t3rn.io>" ]
description = "XBI Substrate ABI"
edition     = "2021"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "substrate-abi"
repository  = "https://github.com/t3rn/xbi"
version     = "0.3.7"

# TODO: share the same crate for sabi/scabi and enable via feature flags

[dependencies]
codec      = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log        = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [ "derive" ] }

sp-core    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "6.0.0" }
sp-std     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, version = "4.0.0" }

[features]
default = [ "std" ]
std     = [ "sp-std/std", "sp-core/std", "sp-runtime/std", "scale-info/std", "codec/std", "log/std" ]
